ui: fix mobile layout horizontal overflow

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -52,11 +52,11 @@ body {
         "foot right";
     gap: 8px;
     padding: 8px;
+    margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     font-family: sans-serif;
     @media only screen and ((max-width: 600px) or (orientation: portrait)) {
-        grid-template-columns: 1fr;
-        grid-template-rows: 0fr 1fr 0fr;
-        grid-template-areas: "left" "right" "foot";
+        display: flex;
+        flex-direction: column;
     }
 }
 
@@ -146,6 +146,7 @@ body {
 
 .pane-left {
     grid-area: left;
+    flex: 0;
 }
 
 .area-editor {
@@ -254,11 +255,16 @@ body {
 
 .area-footer {
     grid-area: foot;
+    flex: 0;
     align-items: center;
     position: sticky;
     bottom: 0;
+    bottom: calc(100dvh - 100vh);
     @media only screen and ((max-width: 600px) or (orientation: portrait)) {
         backdrop-filter: blur(2px);
+    }
+    @media only screen and (max-width: 450px) {
+        flex-direction: column;
     }
 
     .source-repo {
@@ -292,6 +298,7 @@ body {
 
 .pane-right {
     grid-area: right;
+    flex: 1;
 }
 
 .area-controls {
@@ -468,11 +475,14 @@ div.area-footer {
 }
 
 div.area-footer > hr {
-  height: -webkit-fill-available;
-  height: fill-available;
-  min-height: 100%;
-  max-height: 100vh;
-  margin: 0 auto 0;
+    height: 100%;
+    margin: 0 auto;
+
+    @media only screen and (max-width: 450px) {
+        height: revert;
+        width: 100%;
+        margin: auto 0;
+    }
 }
 
 // 旧的l10n CSS规则已移除，现在使用JavaScript i18n模块
